Adds data, pitch presentation and updates Readme

--- a/how-to-use-the-app.Rmd
+++ b/how-to-use-the-app.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "How_to_use"
+title: "Trends in the primary causes of mortality in the U.S."
 author: "pshyamku-courses"
 date: "10/25/2020"
 output: ioslides_presentation
@@ -7,29 +7,53 @@ output: ioslides_presentation
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
+knitr::opts_chunk$set(tidy.opts=list(width.cutoff=60),tidy=TRUE)
+library(forecast)
+library(tsbox)
+library(ggplot2)
 ```
 
-## R Markdown
+## Motivation
 
-This is an R Markdown presentation. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+Mortality statistics are an important metric for assessing the overall trends in 
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document.
+- Quality of life 
+- Advancements in medicine that improve life expectancy over time.
 
-## Slide with Bullets
+Important policy decisions can be made to allocate future funds and resources or establish new thrust areas of research for the advancement of healthcare based on this data.
 
-- Bullet 1
-- Bullet 2
-- Bullet 3
+This app makes predictions on future trends in mortality due to selected causes.
 
-## Slide with R Output
+## Data Source and structure
 
-```{r cars, echo = TRUE}
-summary(cars)
+This [dataset](https://healthdata.gov/dataset/nchs-age-adjusted-death-rates-selected-major-causes-death) has U.S. mortality since 1900. The dataset has three fields (1) Year (2) Cause ( one of Accidents, Cancer, Heart Disease, Influenza and Pneumonia, and Stroke) (3) Age adjusted Death Rate ([AADR](https://www.nlm.nih.gov/nichsr/stats_tutorial/section2/mod5_age.html)).
+
+```{r, echo = TRUE}
+data <- read.csv("Data/NCHS_-_AADR_Major_Causes_of_Death.csv")
+knitr::kable(head(data,3))
 ```
 
-## Slide with Plot
+## Overall App Layout
+The App consists of a side panel and a main panel. 
+The side panel has two inputs - 
 
-```{r pressure}
-plot(pressure)
+- A drop down list to select the cause of death for which you would like to forecast death rates.
+- A slider to select the number of years into the future that you would like to project death rates
+
+The main panel has two plot areas. 
+
+- The upper area presents a plot of all the data.
+- The lower area presents a forecast plot reactively.
+
+## How to use the app
+On the side panel, 
+
+- Select a cause of death and a forecast time window.
+- Click on "Update forecast" to generate a forecast plot based on your selections of Cause and forecast time window.
+
+```{r, echo = FALSE, fig.height=3, fig.width=8, warning=FALSE, message=FALSE, error=FALSE}
+y<- subset(data, Cause == "Heart Disease", select = c(Year, Age.Adjusted.Death.Rate))
+fit <- ets(ts_ts(ts_long(y)), allow.multiplicative.trend = TRUE)
+autoplot(forecast(fit)) + ggtitle("10 year Forecast of Age Adjusted Death Rate for Heart Disease") +
+  xlab("Years") + ylab("Age Adjusted Death Rate") + theme(text = element_text(size=10))
 ```
-
